--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -13,7 +13,7 @@
 
 
 @article{ravi2018pulseq,
- title={Pulseq-Graphical Programming Interface: Open source visual environment for prototyping pulse sequences and integrated magnetic resonance imaging algorithm development},
+ title={{P}ulseq-{G}raphical {P}rogramming {I}nterface: Open source visual environment for prototyping pulse sequences and integrated magnetic resonance imaging algorithm development},
  author={Ravi, Keerthi Sravan and Potdar, Sneha and Poojar, Pavan and Reddy, Ashok Kumar and Kroboth, Stefan and Nielsen, Jon-Fredrik and Zaitsev, Maxim and Venkatesan, Ramesh and Geethanath, Sairam},
  journal={Magnetic resonance imaging},
  volume={52},
@@ -27,7 +27,7 @@
 @misc{obungoloch_2019, title={2019 Junior Fellow Challenge: Africa}, url={https://www.ismrm.org/2019-junior-fellow-challenge/africa/}, journal={ISMRM}, author={Obungoloch, Johnes}, year={2019}}
 
 @article{kose2017blochsolver,
-  title={BlochSolver: a GPU-optimized fast 3D MRI simulator for experimentally compatible pulse sequences},
+  title={BlochSolver: a GPU-optimized fast 3D {MRI} simulator for experimentally compatible pulse sequences},
   author={Kose, Ryoichi and Kose, Katsumi},
   journal={Journal of Magnetic Resonance},
   volume={281},
@@ -43,7 +43,7 @@
 @article{Graesslin_SAR,
 doi={10.1002/mrm.24138},
 author = {Graesslin, Ingmar and Homann, Hanno and Biederer, Sven and Börnert, Peter and Nehrke, Kay and Vernickel, Peter and Mens, Giel and Harvey, Paul and Katscher, Ulrich},
-title = {A specific absorption rate prediction concept for parallel transmission M{R}},
+title = {A specific absorption rate prediction concept for parallel transmission {MR}},
 journal = {Magnetic Resonance in Medicine},
 volume = {68},
 number = {5},
@@ -57,12 +57,12 @@ year = {2012}
 
 @book{webb2016magnetic,
   
-title={Magnetic Resonance Technology: Hardware and System Component Design},
+title={Magnetic {R}esonance {T}echnology: Hardware and {S}ystem {C}omponent {D}esign},
   
 author={Webb, Andrew G.},
   isbn={9781782623595},
   lccn={2016439714},
-  series={New Developments in NMR},
+  series={New {D}evelopments in {NMR}},
   url={https://books.google.com/books?id=PYkmDAAAQBAJ},
   year={2016},
   publisher={Royal Society of Chemistry}
@@ -70,7 +70,7 @@ author={Webb, Andrew G.},
 
 
 @article{mugler1990three,
-  title={Three-dimensional magnetization-prepared rapid gradient-echo imaging (3D M{P} R{AGE})},
+  title={Three-dimensional magnetization-prepared rapid gradient-echo imaging (3D {MP} {RAGE})},
   author={Mugler III, John P and Brookeman, James R},
   journal={Magnetic Resonance in Medicine},
   volume={15},
@@ -106,7 +106,7 @@ doi={10.1126/science.1925560}
 }
 
 @article{stocker2010high,
-  title={High-performance computing M{RI} simulations},
+  title={High-performance computing {MRI} simulations},
   author={St{\"o}cker, Tony and Vahedipour, Kaveh and Pflugfelder, Daniel and Shah, N Jon},
   journal={Magnetic resonance in medicine},
   volume={64},
@@ -120,7 +120,7 @@ doi={10.1126/science.1925560}
 @misc{vsrepo, title={imr-framework/virtual-scanner}, url={https://github.com/imr-framework/Virtual-Scanner}, journal={GitHub}, author={imr-framework}, year={2019}, month={Jul}}
 
 @article{zwart2015graphical,
-  title={Graphical programming interface: A development environment for M{RI} methods},
+  title={Graphical programming interface: A development environment for {MRI} methods},
   author={Zwart, Nicholas R and Pipe, James G},
   journal={Magnetic resonance in medicine},
   volume={74},
@@ -141,7 +141,7 @@ doi={10.1126/science.1925560}
 }
 
 @book{brown2014magnetic,
- title={Magnetic resonance imaging: physical principles and sequence design},
+ title={Magnetic {R}esonance imaging: {P}hysical {P}rinciples and {S}equence {D}esign},
  author={Brown, Robert W and Cheng, Y-C Norman and Haacke, E Mark and Thompson, Michael R and Venkatesan, Ramesh},
  year={2014},
  publisher={John Wiley \& Sons},
@@ -149,7 +149,7 @@ doi={10.1126/science.1925560}
 }
 
 @article{mansfield1977multi,
-  title={Multi-planar image formation using NMR spin echoes},
+  title={Multi-planar image formation using {NMR} spin echoes},
   author={Mansfield, Peter},
   journal={Journal of Physics C: Solid State Physics},
   volume={10},
@@ -161,7 +161,7 @@ doi={10.1126/science.1925560}
 }
 
 @article{webb2003introduction,
-  title={Introduction to biomedical imaging},
+  title={Introduction to {B}iomedical {I}maging},
   author={Webb, Andrew and Kagadis, George C},
   journal={Medical Physics},
   volume={30},
@@ -176,7 +176,7 @@ doi={10.1126/science.1925560}
 author={Rao, Rashmi
 and Venkatesan, Ramesh
 and Geethanath, Sairam},
-title={Role of MRI in medical diagnostics},
+title={Role of {MRI} in medical diagnostics},
 journal={Resonance},
 year={2015},
 month={Nov},
@@ -190,7 +190,7 @@ url={https://doi.org/10.1007/s12045-015-0268-2}
 }
 
 @book{mcrobbie2017mri,
-  title={MRI from Picture to Proton},
+  title={{MRI} from {P}icture to {P}roton},
   author={McRobbie, Donald W and Moore, Elizabeth A and Graves, Martin J and Prince, Martin R},
   year={2017},
   publisher={Cambridge university press},
@@ -198,7 +198,7 @@ url={https://doi.org/10.1007/s12045-015-0268-2}
 }
 
 @book{brown2015mri,
-  title={MRI: basic principles and applications},
+  title={{MRI}: {B}asic {P}rinciples and {A}pplications},
   author={Brown, Mark A and Semelka, Richard C and Dale, Brian M},
   year={2015},
   publisher={John Wiley \& Sons},
